[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "josiauhtools"
version = "0.0.1"
authors = [
  { name="Josiah", email="josiauhlol@gmail.com" },
]
description = "Some tools for python."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]